<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:openDrawer="start"
    android:id="@+id/Dlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/SwipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/HomeRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <com.linkzone.linkzoneapp.widget.RippleView
            android:id="@+id/GotoMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="30dp"
            app:rv_centered="true"
            app:rv_rippleDuration="200"
            app:rv_zoom="true">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_profile_shape">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_email_black_36dp"
                    android:tint="#fff" />

            </RelativeLayout>

        </com.linkzone.linkzoneapp.widget.RippleView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/coverIv"
                        android:scaleType="fitXY"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/NavDp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerVertical="true"
                        android:elevation="10dp"
                        android:layout_marginLeft="20dp"/>

                    <com.linkzone.linkzoneapp.widget.MyBoldTextView
                        android:id="@+id/NavUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/NavDp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:text="Ajit Tiwari"
                        android:textSize="16dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dp" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/profilePercentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp" />

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="2dp"
                                android:src="@drawable/ic_person_black_36dp"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Profile" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="2dp"
                                android:src="@drawable/ic_notifications_black_36dp"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Notification" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="3dp"
                                android:src="@drawable/camera"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Photo" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoMsj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="3dp"
                                android:src="@drawable/ic_email_black_36dp"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Message" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="4dp"
                                android:src="@drawable/ic_addtofav"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="STARRED" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/GotoFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="3dp"
                                android:src="@drawable/ic_feedback_black_36dp"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Feedback" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>

                <com.linkzone.linkzoneapp.widget.RippleView
                    android:id="@+id/Logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:rv_centered="false"
                    app:rv_color="@color/colorPrimary"
                    app:rv_rippleDuration="150"
                    app:rv_zoom="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/blank_circle">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:padding="4dp"
                                android:src="@drawable/logout"
                                android:tint="#414141" />

                        </RelativeLayout>

                        <com.linkzone.linkzoneapp.widget.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/Logout" />

                    </LinearLayout>

                </com.linkzone.linkzoneapp.widget.RippleView>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true">

                <com.linkzone.linkzoneapp.widget.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="TERM &amp; CONDITION" />


            </RelativeLayout>

        </RelativeLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
